--- a/src/app/lifetravel/components/sidenav/sidenav.component.html
+++ b/src/app/lifetravel/components/sidenav/sidenav.component.html
@@ -1,6 +1,11 @@
-<div class="side-nav" >
-
+<div class="side-nav flex align-items-center w-full">
+  <div class="div-left">
+    <h1>Life Travel</h1>
+  </div>
+  <div class="div-right flex justify-content-end">
+    <a href="">Hoteles</a>
+    <a href="">Planes</a>
+    <a href="">Carrito</a>
+    <a href="">Cerrar Sesion</a>
+  </div>
 </div>
-
-
-
