--- a/src/app/lifetravel/views/home.view/home.view.component.html
+++ b/src/app/lifetravel/views/home.view/home.view.component.html
@@ -1,5 +1,14 @@
 <app-sidenav></app-sidenav>
 
-<div class="div-main" >
-
+<div class="div-main">
+<div class="min-div flex align-items-center justify-content-center" >
+<div class="minm-div flex flex-wrap">
+  <div class="card">
+    <div class="flex flex-wrap card-container blue-container" style="max-width: 700px">
+        <div class="flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 border-round" style="min-width: 700px; min-height: 400px">1</div>
+        
+    </div>
+</div>
+</div>
+</div>
 </div>
