--- a/src/app/lifetravel/views/home.view/home.view.component.css
+++ b/src/app/lifetravel/views/home.view/home.view.component.css
@@ -4,8 +4,25 @@
   background-color: white;
 }
 
+.min-div{
+  background-color: bisque;
+  width: 100%;
+  height: 100%;
+}
 
+.minm-div{
+  width: 90%;
+  height: 95%;
+  margin-top: 2.3%;
+  background-color: rgb(111, 184, 184);
+  border-radius: 15px 15px 0 0 ;
 
+}
 
-
-
+.item1{
+  min-width: 200px;
+  max-width: 600px;
+  min-height: 100px;
+  max-height: 300px;
+  background-color: azure;
+}
