--- a/src/styles.css
+++ b/src/styles.css
@@ -3,16 +3,18 @@
 @import "primeng/resources/primeng.css";
 @import '../node_modules/primeflex/primeflex.css';
 @import '../node_modules/bootstrap-icons/font/bootstrap-icons.css';
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap');
 
 html, body { height: 100%; }
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0;  }
 
 *
 {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Dosis', sans-serif;
 }
 
 .side-nav{
@@ -25,7 +27,7 @@ a{
   text-decoration: none;
   color: rgb(62, 175, 128);
   margin-right: 15px;
-  font-size: 20px;
+  font-size: 21px;
   font-weight: 700;
 }
 
