--- a/src/app/lifetravel/views/planes.view/planes.view.component.html
+++ b/src/app/lifetravel/views/planes.view/planes.view.component.html
@@ -1,11 +1,11 @@
 <app-sidenav></app-sidenav>
-
 <div class="div-main">
   <div class="min-div flex align-items-center justify-content-center">
     <div class="minm-div flex flex-wrap">
-      <app-hotel-card></app-hotel-card>
-      <app-hotel-card></app-hotel-card>
-      <app-hotel-card></app-hotel-card>
+      <app-plan-card></app-plan-card>
+      <app-plan-card></app-plan-card>
+      <app-plan-card></app-plan-card>
+    
     </div>
   </div>
 </div>
