--- a/src/app/lifetravel/components/sidenav/sidenav.component.html
+++ b/src/app/lifetravel/components/sidenav/sidenav.component.html
@@ -35,8 +35,8 @@
     <h1>Life Travel</h1>
   </div>
   <div class="div-right flex justify-content-end">
-    <a href="">Hoteles</a>
-    <a href="">Planes</a>
+    <a routerLink="/home">Hoteles</a>
+    <a routerLink="/planes">Planes</a>
     <a (click)="shoppingcart = true">Carrito</a>
     <a href="">Cerrar Sesion</a>
   </div>
