--- a/src/app/lifetravel/components/plan-card/plan-card.component.html
+++ b/src/app/lifetravel/components/plan-card/plan-card.component.html
@@ -5,9 +5,9 @@
         alt="">
     </div>
     <div class="description  ">
-      <p>Esta es una aventura que podras visitar en familia ! <br> no te quedes con las ganas de conocer a mikey mouse !
+      <p>Esta es una aventura que podras visitar en familia ! <br> no te quedes con las ganas de conocer a Mickey mouse !
       </p>
-      <p>Esta es una aventura que podras visitar en familia ! <br> no te quedes con las ganas de conocer a mikey mouse !
+      <p>Esta es una aventura que podras visitar en familia ! <br> no te quedes con las ganas de conocer a Mickey mouse !
       </p>
 
     </div>
@@ -15,7 +15,7 @@
   <div class="div-bot flex ">
     <div class="icons flex align-items-center flex-column">
       <div class="icons-container">
-        <h4>El plan Cuenta con lo Suiguiente:</h4>
+        <h4>El plan Cuenta con lo Siguiente:</h4>
         <li *ngFor="let items of atributos;index as i">
           {{items}}
         </li>
